# SoltysMath

./: CMakeLists.txt  build_with_cmake.bat
cli/: main.cpp
dotnet/csharp_vs_cpp/: Benchmark.cs  DotnetSoltysMathLib.cs  NativeSoltysMathLib.cs  Program.cs  csharp_vs_cpp.csproj  csharp_vs_cpp.sln
ffi/dotnet/: NativeLibUse.sln
ffi/dotnet/NativeLibUse/: NativeLibUse.csproj  NativeSoltysMathLib.cs  Program.cs
ffi/python/: .gitignore  CreateIsPrimeScript.cmake  is_prime.py.in
ffi/rust/: .gitignore  Cargo.toml  CreateBuildRs.cmake  build.rs.in
ffi/rust/src/: main.rs
lib/: math.cpp
lib/include/soltysmath/: math.hpp
test/: soltysmath.cpp
